fix: move the scroll to top button to the left to prevent horizontal overflow on mobile

--- a/src/components/styles/footer.module.css
+++ b/src/components/styles/footer.module.css
@@ -13,7 +13,7 @@
   height: 5rem;
   position: absolute;
   top: -2.5rem;
-  left: 80%;
+  left: 75%;
   box-shadow: none !important;
   min-width: auto !important;
   margin: 0 !important;
